Closed
Bug 993058
Opened 9 years ago
Closed 9 years ago
Loosen aliasing assertion in LIRGenerator::visitGetDOMMember
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla31
People
(Reporter: peterv, Assigned: peterv)
References
Details
Attachments
(1 file)
1.34 KB,
patch
|
bzbarsky
:
review+
|
Details | Diff | Splinter Review |
No description provided.
Attachment #8402823 -
Flags: review?(bzbarsky)
![]() |
||
Comment 1•9 years ago
|
||
Comment on attachment 8402823 [details] [diff] [review] v1 r=me
Attachment #8402823 -
Flags: review?(bzbarsky) → review+
Assignee | ||
Comment 2•9 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/b6a353fc2b94
Comment 3•9 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/b6a353fc2b94
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla31
You need to log in
before you can comment on or make changes to this bug.
Description
•