Bug 993058 - Loosen aliasing assertion in LIRGenerator::visitGetDOMMember. r=bz.